--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ img {
   width: 600px;
   align-self: auto;
 }
+.about-us {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 32px;
+}
 
 .search-icon{
   font-size: 1.6rem;
@@ -115,13 +119,20 @@ button a {
   background-color: #fff;
 }
 .main-container {
+  display: grid;
+  grid-template-columns: repeat(1, 2fr); 
+  gap: 1px; 
+  padding: 1px; 
   background-color: #fff;
   text-align: center;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
-  padding: 0.1px;
   border-radius: 1px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+.video-item {
+  width: 50%;
+  heigh: 50%;
 }
 .text-header {
   font-size: 1.2rem;
