--- a/src/index.css
+++ b/src/index.css
@@ -1,157 +1,167 @@
 /*Main body styling*/
 body {
-  font-family: Arial, sans-serif;
+font-family: Arial, sans-serif;
 }
 h1 {
-  text-align: center;
+text-align: center;
+font-family: 'Roboto', sans-serif;
+color: #ff6347; 
+
+}
+h3{
+text-shadow: tomato ;
+font-style: italic;
+font-stretch: extra-expanded;
 }
 @media only screen and (max-width: 768px) {
-  .container {
-    padding: 10px;
-  }
-  body::-webkit-scrollbar {
-    display: none;
-  }  
-  ul {
-    padding: 0;
-  }
-  li {
-    list-style-type: none;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
+body::-webkit-scrollbar {
+display: none;
+}  
+ul {
+  padding: 0;
 }
-h1 {
-  font-family: 'Roboto', sans-serif;
-  color: #ff6347; 
-  text-align: center;
+li {
+  list-style-type: none;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
 }
+}
+
 img {
-  height: 150px;
-  width: 600px;
-  align-self: auto;
+height: 150px;
+width: 600px;
+align-self: auto;
 }
 
 /* body {
-  margin: 0;
-  font-family: 'Roboto', 'Segoe UI', 'Helvetica Neue', sans-serif;
-  background-color: #f0f2f5;
-  color: #333;
-  -ms-overflow-style: none;  
-  scrollbar-width: none;  
+margin: 0;
+font-family: 'Roboto', 'Segoe UI', 'Helvetica Neue', sans-serif;
+background-color: #f0f2f5;
+color: #333;
+-ms-overflow-style: none;  
+scrollbar-width: none;  
 } */
 /*Header & Navigation*/
 .header {
-  text-align: center;
-  background-color: #2bd8ad;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  font-weight: 100;
-  padding: 1rem;
-  margin-bottom: 0px;
+text-align: center;
+background-color: #2bd8ad;
+font-family: 'Roboto', sans-serif;
+font-size: 1.5rem;
+text-transform: uppercase;
+font-weight: 100;
+padding: 1rem;
+margin-bottom: 0px;
 }
 .main {
-  margin-top: 1.4rem;
-  display: flex;
-  gap: .4rem;
-  justify-content: center;
+/* margin-top: 1.4rem; */
+display: flex;
+/* gap: .4rem; */
+justify-content: center;
 }
 
 .navbar-container {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+background-color: #fff;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 0 20px;
+box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .navbar-buttons {
-  display: flex;
-  gap: 10px;
+display: flex;
+gap: 10px;
 }
 .paddedButton {
-  cursor: pointer;
-  background: #ff6347;
-  color: #8ae4c6; 
-  font-size: 22px;
-  padding: 4.75rem 1.5rem;
-  margin: 5px;
-  border: none;
-  border-radius: 25px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  transition: background-color 0.3s ease;
-  width: 200px;
-  height: 50px;
+cursor: pointer;
+background: #ff6347;
+color: #8ae4c6; 
+font-size: 22px;
+padding: 3.75rem 0.5rem;
+margin: 1px;
+border: none;
+border-radius: 25px;
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+transition: background-color 0.3s ease;
+width: 200px;
+height: 50px;
 }
 
 
 .paddedButton:hover {
-  background-color: #76d4b5;
+background-color: #76d4b5;
 }
 paddedButton a {
-  color: inherit;
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+color: inherit;
+text-decoration: none;
+font-family: 'Roboto', sans-serif;
 }
 .videoGenreTable{
-  border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 2rem;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+border-collapse: collapse;
+margin: 25px 0;
+font-size: 2rem;
+font-family: sans-serif;
+min-width: 400px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 td, thead {
-  padding: 12px 15px;
-  
+padding: 12px 15px;
+
 }
 thead {
-  text-align: center;
-  font-weight: 600  ;
+text-align: center;
+font-weight: 600  ;
 }
 tr {
-  border-bottom: 1px solid #dddddd;
+border-bottom: 1px solid #dddddd;
 }
 
 tr:nth-of-type(even) {
-  background-color: #f3f3f3;
+background-color: #f3f3f3;
 }
 
 .styled-table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+border-bottom: 2px solid #009879;
 }
 .pageLinks{
-  transition: background-color 0.3s ease;
-  text-decoration: none;
+transition: background-color 0.3s ease;
+text-decoration: none;
 }
 .pageLinks a{
-  transition: background-color 0.3s ease;
-  text-decoration: none;
+transition: background-color 0.3s ease;
+text-decoration: none;
 }
 .pageLinks:hover{
-  background-color: #76d4b5;
+background-color: #76d4b5;
 }
 .mainTextContent {
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-size: 20px;
 }
 .mainTextContent a {
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
-  text-decoration: none;
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-size: 20px;
+text-decoration: none;
 }
 .text-header {
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #333;
-  margin-bottom: 10px;
+font-size: 1.2rem;
+font-weight: 700;
+color: #333;
+margin-bottom: 10px;
 }
 /*Form & Buttons styling*/
 .search-icon{
-  font-size: 1.6rem;
+font-size: 1.6rem;
 }
 input {
+text-align: center;
+border: 1px solid #ccc;
+border-radius: 25px;
+padding: 0.75rem 1rem;
+font-weight: 500;
+font-size: 1rem;
+margin: 5px;
+}
+.textArea{
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 25px;
@@ -159,162 +169,184 @@ input {
   font-weight: 500;
   font-size: 1rem;
   margin: 5px;
+  }
+.dropDownMenu {
+
+border: 1px solid #ccc;
+border-radius: 25px;
+padding: 0.75rem 1rem;
+font-weight: 500;
+font-size: 1rem;
+margin: 5px;
 }
 button {
-  cursor: pointer;
-  background: #8ae4c6;
-  color: #ff6347; 
-  font-size: 1.2rem;
-  padding: 0.75rem 1.5rem;
-  margin: 5px;
-  border: none;
-  border-radius: 25px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  transition: background-color 0.3s ease;
+cursor: pointer;
+background: #8ae4c6;
+color: #ff6347; 
+font-size: 1.2rem;
+padding: 0.75rem 1.5rem;
+margin: 5px;
+border: none;
+border-radius: 25px;
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+transition: background-color 0.3s ease;
 }
 button:hover {
-  background-color: #76d4b5;
+background-color: #76d4b5;
 }
 button a {
-  color: inherit;
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+color: inherit;
+text-decoration: none;
+font-family: 'Roboto', sans-serif;
 }
 /*Video Styling*/
 .video-container {
-  display: grid;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
+display: grid;
+height: 100%;
+margin: 0;
+padding: 0;
+background-color: #fff;
 }
 .main-container {
-  display: grid;
-  grid-template-columns: repeat(1, 2fr); 
-  gap: 1px; 
-  padding: 1px; 
-  background-color: #fff;
-  text-align: center;
-  justify-items: center;
-  align-items: center;
-  border-radius: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+display: grid;
+/* grid-template-columns: repeat(1, 2fr);  */
+/* gap: 1px;  */
+/* padding: 1px;  */
+background-color: #fff;
+text-align: center;
+justify-items: center;
+align-items: center;
+/* border-radius: 1px; */
+/* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); */
 }
-.mainContainer {
+.videoContainer {
   display: grid;
-  grid-template-columns: repeat(1, 2fr); 
-  gap: 1px; 
-  padding: 1px; 
+  outline: 2.3px solid #76d4b5;
+  /* grid-template-columns: repeat(1, 2fr);  */
+  /* gap: 1px;  */
+  /* padding: 1px;  */
   background-color: #fff;
   text-align: center;
   justify-items: center;
   align-items: center;
-  border-radius: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  /* border-radius: 1px; */
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); */
+  }
+.mainContainer {
+display: grid;
+grid-template-columns: repeat(1, 2fr); 
+gap: 1px; 
+padding: 1px; 
+background-color: #fff;
+text-align: center;
+justify-items: center;
+align-items: center;
+border-radius: 1px;
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 .video-item {
-  width: 50%;
-  heigh: 50%;
+width: 50%;
+height: 50%;
 }
 input.upload {
-  display: none;
+display: none;
 }
 .custom-file-upload {
-  display: inline-block;
-  cursor: pointer;
-  background-color: #8ae4c6;
-  color: white;
-  font-size: 1.2rem;
-  padding: 0.75rem 1.5rem;
-  border: none;
-  border-radius: 25px;
-  transition: background-color 0.3s ease;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
+display: inline-block;
+cursor: pointer;
+background-color: #8ae4c6;
+color: white;
+font-size: 1.2rem;
+padding: 0.75rem 1.5rem;
+border: none;
+border-radius: 25px;
+transition: background-color 0.3s ease;
+text-align: center;
+font-family: 'Roboto', sans-serif;
 }
 .custom-file-upload:hover {
-  background-color: #76d4b5;
+background-color: #76d4b5;
 }
 .video-title {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  font-weight: 700;
-  padding: 1rem;
-  margin-bottom: 1px;
+font-family: 'Roboto', sans-serif;
+font-size: 1.5rem;
+text-transform: uppercase;
+font-weight: 700;
+/* padding: 1rem; */
+margin-bottom: 1px;
 }
 /* Base styles */
 /* body {
-  font-family: Arial, sans-serif;
+font-family: Arial, sans-serif;
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: 20px;
+text-align: center;
+margin-bottom: 20px;
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 20px;
 } */
 
 /* Table styles */
 .user-table {
-  width: 100%;
-  max-width: 800px;
-  border-collapse: collapse;
-  margin: 20px 0;
+width: 100%;
+max-width: 800px;
+border-collapse: collapse;
+margin: 20px 0;
 }
 .user-table th,
 .user-table td {
-  padding: 10px;
-  text-align: left;
-  border: 1px solid #ddd;
+padding: 10px;
+text-align: left;
+border: 1px solid #ddd;
 }
 
 .user-table th {
-  background-color: #f4f4f4;
-  font-weight: bold;
+background-color: #f4f4f4;
+font-weight: bold;
 }
 
 .user-table tr:nth-child(even) {
-  background-color: #f9f9f9;
+background-color: #f9f9f9;
 }
 
 /* Responsive styles for smaller screens */
 /* @media only screen and (max-width: 768px) {
-  .container {
-    padding: 10px;
-  }
+.container {
+  padding: 10px;
+}
 
-  .user-table th,
-  .user-table td {
-    padding: 8px;
-  }
+.user-table th,
+.user-table td {
+  padding: 8px;
+}
 } */
 /*Loading styles*/
 .spinner-full-page {
-  margin: 2.5rem;
-  height: calc(100vh - 5rem);
-  background-color: var(--color-dark--1);
+margin: 2.5rem;
+height: calc(100vh - 5rem);
+background-color: var(--color-dark--1);
 }
 .spinner-container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 .spinner {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  background: conic-gradient(#bb0d0d00 10%, var(--color-light--2));
-  -webkit-mask: radial-gradient(farthest-side, #18215300 calc(100% - 8px), #000 0);
-  animation: rotate 1.5s infinite linear;
+width: 6rem;
+height: 6rem;
+border-radius: 50%;
+background: conic-gradient(#bb0d0d00 10%, var(--color-light--2));
+-webkit-mask: radial-gradient(farthest-side, #18215300 calc(100% - 8px), #000 0);
+animation: rotate 1.5s infinite linear;
 }
 @keyframes rotate {
-  to {
-    transform: rotate(1turn);
-  }
+to {
+  transform: rotate(1turn);
+}
 }
