--- a/src/components/VideoItem.module.css
+++ b/src/components/VideoItem.module.css
@@ -1,8 +1,9 @@
 video {
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
+    display: block;
 }
 
 .videoUsername {
