--- a/src/components/VideoItem.module.css
+++ b/src/components/VideoItem.module.css
@@ -35,14 +35,16 @@ video {
 }
 
 .videoUsername {
-    font-family: cursive;
-    font-size: 1.5rem;
-}
-
-.videoTitle {
+    
     font-family:Arial, Helvetica, sans-serif;
     font-size: 1.0rem;
     margin-bottom: 0px;
+}
+
+.videoTitle {
+    align-items: center;
+    font-family: cursive;
+    font-size: 1.5rem;
 }
 
 .videoContainer {
